terraform/category/cds/account_manage_back/securitygroup.tf
# ALB SecurityGroup
resource "aws_security_group" "alb" {
  name        = "${var.account_manage_prefix}-alb-sg"
  description = "${var.account_manage_prefix}-alb-sg"
  vpc_id      = data.terraform_remote_state.infra.outputs.vpc_id

  # セキュリティグループ内のリソースからインターネットへのアクセスを許可する
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.account_manage_prefix}-alb-sg"
  }
}

resource "aws_security_group_rule" "alb_http" {
  security_group_id = aws_security_group.alb.id

  # セキュリティグループ内のリソースへインターネットからのアクセスを許可する
  type = "ingress"

  from_port = 80
  to_port   = 80
  protocol  = "tcp"

  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "alb_https" {
  security_group_id = aws_security_group.alb.id

  # セキュリティグループ内のリソースへインターネットからのアクセスを許可する
  type = "ingress"

  from_port = 443
  to_port   = 443
  protocol  = "tcp"

  cidr_blocks = ["0.0.0.0/0"]
}

# ECS SecurityGroup
resource "aws_security_group" "ecs" {
  name        = "${var.account_manage_prefix}-ecs-sg"
  description = "${var.account_manage_prefix}-ecs-sg"
  vpc_id      = data.terraform_remote_state.infra.outputs.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.account_manage_prefix}-ecs-sg"
  }
}

resource "aws_security_group_rule" "ecs_http" {
  security_group_id = aws_security_group.ecs.id

  type = "ingress"

  from_port = 80
  to_port   = 80
  protocol  = "tcp"

  source_security_group_id = aws_security_group.alb.id
}
